# scftolus

./: .clang-format  .cmake-format  .external  .flake8  .gitmodules  .isort.cfg  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt
cmake/: discovery.cmake
dependencies/: index.html
docs/: dependencies.md  index.md
libraries/scftolus/: CMakeLists.txt
libraries/scftolus/include/: configuration.hpp  descriptive_exception.hpp  exit_codes.hpp  scf_handler.hpp  scftolus.hpp
libraries/scftolus/include/scftolus/: configuration.hpp  descriptive_exception.hpp  exit_codes.hpp  scf_handler.hpp  scftolus.hpp
libraries/scftolus/source/: scf_handler.cpp  scftolus.cpp
libraries/scftolus/tests/: test_scftolus.cpp
scripts/: format_cmake.py  install_libs.py
search/: search_index.json
source/: main.cpp
